# 2nd-quarter

2nd assignment/hello_world_agent/my-agent/: pyproject.toml
2nd assignment/hello_world_agent/my-agent/src/my_agent/: hello-agent.py
3rd assignment/: README.md
3rd assignment/src/my_agent/: moodmate.py  output.md
4th assignment/: README.md  pyproject.toml
4th assignment/src/assistant/: __init__.py  aagent.py  chat_history.json
5th assignment/: pyproject.toml
5th assignment/src/llm/: chat_history.json  chatbot.py
assignment-1/: README.md  pyproject.toml
assignment-1/src/: format.py
