[project]
name = "my-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmad-Nadeem919", email = "an1469447@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.0.14",
]

[project.scripts]
my-agent = "my_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
